--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,12 @@ ACTIONS_STEP_DEBUG=true
 
 # GitHub Actions inputs should follow `INPUT_<name>` format (case-sensitive).
 # Hyphens should not be converted to underscores!
-INPUT_MILLISECONDS=2400
+INPUT_DOCS-DIR="./docs"
+INPUT_CONFLUENCE-URL=foo-confluence.atlassian.net
+INPUT_CONFLUENCE-PERSONAL-ACCESS-TOKEN=foo-access-token
+INPUT_CONFLUENCE-SPACE-KEY=foo-space-key
+INPUT_CONFLUENCE-ROOT-PAGE-ID=foo-root-page-id
+INPUT_LOG-LEVEL=debug
 
 # GitHub Actions default environment variables. These are set for every run of a
 # workflow and can be used in your actions. Setting the value here will override
