chore: Add release branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,12 +5,10 @@ name: Continuous Integration
 
 on:
   pull_request:
-    branches:
-      - main
   push:
     branches:
       - main
-      - releases/*
+      - release
 
 permissions:
   contents: read
