--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "lint": "eslint .",
     "lint:staged": "lint-staged",
     "local-action": "local-action . dist/index.ts .env",
-    "package": "ncc build src/index.ts --transpile-only -o dist --source-map --license licenses.txt",
+    "package": "ncc build src/index.ts --transpile-only -o dist --source-map --license licenses.txt && node ./script/post-package.js",
     "prepare": "husky install"
   },
   "license": "Apache-2.0",
@@ -77,6 +77,7 @@
     "eslint-plugin-prettier": "5.1.3",
     "husky": "9.0.11",
     "lint-staged": "15.2.10",
+    "replace-in-file": "8.2.0",
     "typescript": "5.6.3"
   },
   "lint-staged": {
