chore: Add tests-e2e environment

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -15,6 +15,7 @@ permissions:
 
 jobs:
   sync-to-confluence:
+    environment: production
     name: Sync Docs to Confluence
     runs-on: ubuntu-latest
 
