--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -33,5 +33,19 @@ jobs:
           files-pattern: 'README.md'
           confluence-url: ${{ vars.CONFLUENCE_URL }}
           confluence-root-page-id: ${{ vars.CONFLUENCE_ROOT_PAGE_ID }}
+          confluence-root-page-name: "Cross"
+          confluence-space-key: ${{ vars.CONFLUENCE_SPACE_KEY }}
+          confluence-personal-access-token: ${{ secrets.CONFLUENCE_PAT }}
+
+      - name: Sync Changelog
+        id: sync-changelog
+        uses: ./
+        with:
+          mode: flat
+          docs-dir: '.'
+          files-pattern: 'CHANGELOG.md'
+          confluence-url: ${{ vars.CONFLUENCE_URL }}
+          confluence-root-page-id: ${{ vars.CONFLUENCE_ROOT_PAGE_ID }}
+          confluence-root-page-name: "Cross"
           confluence-space-key: ${{ vars.CONFLUENCE_SPACE_KEY }}
           confluence-personal-access-token: ${{ secrets.CONFLUENCE_PAT }}
