test: Add E2E tests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,24 +23,8 @@ jobs:
         id: checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - uses: ./.github/actions/setup-node
         id: setup-node
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: .node-version
-          cache: npm
-
-      - uses: DamianReeves/write-file-action@v1.3
-        with:
-          path: .npmrc
-          contents: |
-              @tid-xcut:registry=https://nexus.tid.es/repository/npm-xcut-components/
-              //nexus.tid.es/repository/npm-xcut-components/:_auth=${{ secrets.NPM_TOKEN_XCUT }}
-          write-mode: append
-
-      - name: Install Dependencies
-        id: npm-ci
-        run: npm ci
 
       - name: Lint
         id: npm-lint
