--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -4,6 +4,11 @@
 name: Setup Node.js
 description: Setup the node.js environment
 
+inputs:
+  npm-token:
+    description: 'The NPM token to use for authentication'
+    required: true
+
 runs:
   using: composite
   steps:
@@ -18,7 +23,7 @@ runs:
         path: .npmrc
         contents: |
             @tid-xcut:registry=https://nexus.tid.es/repository/npm-xcut-components/
-            //nexus.tid.es/repository/npm-xcut-components/:_auth=${{ secrets.NPM_TOKEN_XCUT }}
+            //nexus.tid.es/repository/npm-xcut-components/:_auth=${{ inputs.npm-token }}
         write-mode: append
     - name: Install Dependencies
       id: npm-ci
