--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "markdown-confluence-sync-action",
   "description": "GitHub Action to sync markdown files to Confluence",
-  "version": "1.0.0-beta.4",
+  "version": "1.0.0",
   "author": "Telefónica Innovación Digital",
   "homepage": "https://github.com/Telefonica/markdown-confluence-sync-action",
   "repository": {
@@ -44,14 +44,17 @@
     "node": ">=21"
   },
   "scripts": {
-    "check:types": "npm run check:types:code",
+    "check:types": "npm run check:types:code && npm run check:types:test",
     "check:types:code": "tsc --noEmit",
+    "check:types:test": "tsc --noEmit --project ./test/tsconfig.json",
     "cspell": "cspell .",
     "lint": "eslint .",
     "lint:staged": "lint-staged",
     "local-action": "local-action . dist/index.ts .env",
     "package": "ncc build src/index.ts --transpile-only -o dist --source-map --license licenses.txt && node ./script/post-package.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test:e2e": "jest --config jest.e2e.config.js",
+    "test:unit": "jest --config jest.unit.config.js"
   },
   "license": "Apache-2.0",
   "dependencies": {
@@ -63,12 +66,15 @@
     "@eslint/json": "0.6.0",
     "@eslint/markdown": "6.2.1",
     "@github/local-action": "2.2.0",
+    "@types/jest": "29.5.14",
     "@types/node": "22.9.0",
     "@typescript-eslint/eslint-plugin": "8.14.0",
     "@typescript-eslint/parser": "8.14.0",
     "@vercel/ncc": "0.38.3",
+    "confluence.js": "1.7.4",
     "cspell": "8.15.5",
     "dompurify": "3.2.1",
+    "dotenv": "16.4.5",
     "eslint": "9.7.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.3",
@@ -76,8 +82,10 @@
     "eslint-plugin-jest": "28.9.0",
     "eslint-plugin-prettier": "5.1.3",
     "husky": "9.0.11",
+    "jest": "29.7.0",
     "lint-staged": "15.2.10",
     "replace-in-file": "8.2.0",
+    "ts-jest": "29.2.5",
     "typescript": "5.6.3"
   },
   "lint-staged": {
