feat: Support id mode. Add files-metadata input (#21)
* feat: Add `files-metadata` input. It allows the user to provide a JSON array with the metadata of the files to be synchronized. This way, the user can set the Confluence id, title, etc. without the need to add frontmatter to the markdown files.
* feat: Support `id` mode. It allows the user to provide a list of files to be synchronized only by their Confluence id.
* chore(deps): Bump @tid-xcut/markdown-confluence-sync from 1.0.0 to 1.1.0 (Add id mode and filesMetadata option)

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -22,29 +22,27 @@ jobs:
         id: checkout
         uses: actions/checkout@v4
 
-      - name: Sync Readme
-        id: sync-readme
+      - name: Sync Docs
+        id: sync-docs
         uses: ./
         with:
-          mode: flat
+          mode: id
           docs-dir: '.'
-          files-pattern: 'README.md'
+          files-pattern: '*.md'
+          files-metadata: |
+            [
+              {
+                "path": "README.md",
+                "id": "${{ vars.CONFLUENCE_README_PAGE_ID }}",
+                "title": "[Cross] [Markdown Confluence Sync] Github action"
+              },
+              {
+                "path": "CHANGELOG.md",
+                "id": "${{ vars.CONFLUENCE_CHANGELOG_PAGE_ID }}",
+                "title": "[Cross] [Markdown Confluence Sync] [Github action] Releases"
+              }
+            ]
           confluence-url: ${{ vars.CONFLUENCE_URL }}
-          confluence-root-page-id: ${{ vars.CONFLUENCE_ROOT_PAGE_ID }}
-          confluence-root-page-name: "Cross"
-          confluence-space-key: ${{ vars.CONFLUENCE_SPACE_KEY }}
-          confluence-personal-access-token: ${{ secrets.CONFLUENCE_PAT }}
-
-      - name: Sync Changelog
-        id: sync-changelog
-        uses: ./
-        with:
-          mode: flat
-          docs-dir: '.'
-          files-pattern: 'CHANGELOG.md'
-          confluence-url: ${{ vars.CONFLUENCE_URL }}
-          confluence-root-page-id: ${{ vars.CONFLUENCE_ROOT_PAGE_ID }}
-          confluence-root-page-name: "Cross"
           confluence-space-key: ${{ vars.CONFLUENCE_SPACE_KEY }}
           confluence-personal-access-token: ${{ secrets.CONFLUENCE_PAT }}
 
@@ -69,5 +67,5 @@ jobs:
         env:
           CONFLUENCE_URL: ${{ vars.CONFLUENCE_URL }}
           CONFLUENCE_PAT: ${{ secrets.CONFLUENCE_PAT }}
-          CONFLUENCE_ROOT_PAGE_ID: ${{ vars.CONFLUENCE_ROOT_PAGE_ID }}
+          CONFLUENCE_README_PAGE_ID: ${{ vars.CONFLUENCE_README_PAGE_ID }}
           CONFLUENCE_CHANGELOG_PAGE_ID: ${{ vars.CONFLUENCE_CHANGELOG_PAGE_ID }}
