chore: Add missing license headers. Fix copyright check

--- a/.github/check-spdx-headers.config.yml
+++ b/.github/check-spdx-headers.config.yml
@@ -27,7 +27,7 @@ rules:
           - "src/**"
           - "**/*.yml"
         copyright:
-          - "\\d{4}(\\s-\\s\\d{4})? Telefónica Innovación Digital"
+          - "\\d{4}(\\s-\\s\\d{4})? Telefónica Innovación Digital and contributors"
 ignore:
   - "**/node_modules/**"
   - "dist/**"
