--- a/.github/workflows/open-source-checks.yml
+++ b/.github/workflows/open-source-checks.yml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2025 Telefónica Innovación Digital
+# SPDX-FileCopyrightText: 2025 Telefónica Innovación Digital and contributors
 # SPDX-License-Identifier: MIT
 
 name: Open Source Checks
