--- a/.github/check-spdx-headers.config.yml
+++ b/.github/check-spdx-headers.config.yml
@@ -11,12 +11,20 @@ rules:
         license: "Apache-2.0"
         ignore:
           - "*.config.js"
+          - "script/**"
   - name: "Config files"
     headers:
       - files:
           - ".github/**/*.yml"
           - "**/*.yml"
           - "*.config.js"
+        license:
+          - "MIT"
+          - "Apache-2.0"
+  - name: "Scripts"
+    headers:
+      - files:
+          - "script/**"
         license:
           - "MIT"
           - "Apache-2.0"
