--- a/.github/check-spdx-headers.config.yml
+++ b/.github/check-spdx-headers.config.yml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: 2025 Telefónica Innovación Digital and contributors
+# SPDX-FileCopyrightText: 2025 Telefónica Innovación Digital
 # SPDX-License-Identifier: MIT
 
 rules:
@@ -35,8 +35,7 @@ rules:
           - "src/**"
           - "**/*.yml"
         copyright:
-          - "\\d{4}(\\s-\\s\\d{4})? Telefónica Innovación Digital"
-          - "\\d{4}(\\s-\\s\\d{4})? Telefónica Innovación Digital and contributors"
+          - "\\d{4}(\\s-\\s\\d{4})? Telefónica Innovación Digital( and contributors)?"
 ignore:
   - "**/node_modules/**"
   - "dist/**"
