--- a/package.json
+++ b/package.json
@@ -30,29 +30,29 @@
     "update",
     "create",
     "delete",
-    "cli",
-    "node",
-    "json",
+    "github",
+    "action",
     "attachments",
     "images"
   ],
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./dist/main.js"
   },
   "type": "module",
   "engines": {
     "node": ">=21"
   },
+  "packageManager": "pnpm@9.4.0",
   "scripts": {
     "check:types": "npm run check:types:code && npm run check:types:test",
     "check:types:code": "tsc --noEmit",
     "check:types:test": "tsc --noEmit --project ./test/tsconfig.json",
-    "cspell": "cspell .",
+    "cspell": "cspell . ./.github/**/*.md",
     "lint": "eslint .",
     "lint:staged": "lint-staged",
     "local-action": "local-action . dist/index.ts .env",
-    "package": "ncc build src/index.ts --transpile-only -o dist --source-map --license licenses.txt && node ./script/post-package.js",
-    "prepare": "husky install",
+    "build": "tsc",
+    "prepare": "husky",
     "test:e2e": "jest --config jest.e2e.config.js",
     "test:unit": "jest --config jest.unit.config.js"
   },
@@ -71,7 +71,6 @@
     "@types/node": "22.9.0",
     "@typescript-eslint/eslint-plugin": "8.14.0",
     "@typescript-eslint/parser": "8.14.0",
-    "@vercel/ncc": "0.38.3",
     "confluence.js": "1.7.4",
     "cspell": "8.15.5",
     "dompurify": "3.2.1",
@@ -82,12 +81,19 @@
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jest": "28.9.0",
     "eslint-plugin-prettier": "5.1.3",
+    "globals": "16.0.0",
     "husky": "9.0.11",
     "jest": "29.7.0",
     "lint-staged": "15.2.10",
-    "replace-in-file": "8.2.0",
     "ts-jest": "29.2.5",
     "typescript": "5.6.3"
+  },
+  "files": [
+    "dist",
+    "bin"
+  ],
+  "bin": {
+    "markdown-confluence-sync-action": "./bin/markdown-confluence-sync-action.js"
   },
   "lint-staged": {
     "*.js": "eslint",
