--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "cspell": "cspell . ./.github/**/*.md",
     "lint": "eslint .",
     "lint:staged": "lint-staged",
-    "local-action": "local-action . dist/index.ts .env",
-    "build": "tsc",
+    "build": "ncc build src/main.ts --transpile-only -o dist --source-map --license licenses.txt && node ./script/post-package.js",
     "prepare": "husky",
     "test:e2e": "jest --config jest.e2e.config.js",
     "test:unit": "jest --config jest.unit.config.js"
@@ -59,7 +58,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@actions/core": "1.11.1",
-    "@tid-xcut/markdown-confluence-sync": "1.1.0",
+    "@mermaid-js/mermaid-cli": "11.4.0",
     "yaml": "2.6.1"
   },
   "devDependencies": {
@@ -67,10 +66,12 @@
     "@eslint/json": "0.6.0",
     "@eslint/markdown": "6.2.1",
     "@github/local-action": "2.2.0",
+    "@tid-xcut/markdown-confluence-sync": "1.1.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.9.0",
     "@typescript-eslint/eslint-plugin": "8.14.0",
     "@typescript-eslint/parser": "8.14.0",
+    "@vercel/ncc": "0.38.3",
     "confluence.js": "1.7.4",
     "cspell": "8.15.5",
     "dompurify": "3.2.1",
@@ -85,6 +86,7 @@
     "husky": "9.0.11",
     "jest": "29.7.0",
     "lint-staged": "15.2.10",
+    "replace-in-file": "8.2.0",
     "ts-jest": "29.2.5",
     "typescript": "5.6.3"
   },
