--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,22 +3,16 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "es2020",
+    "types": ["dompurify"],
     "rootDir": "./src",
     "moduleResolution": "bundler",
     "baseUrl": "./",
     "sourceMap": true,
     "outDir": "./dist",
-    "declaration": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
-    "useDefineForClassFields": true,
-    "importsNotUsedAsValues": "remove",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noUnusedParameters": true,
-    "isolatedModules": true,
-    "strictPropertyInitialization": false,
-    "strictNullChecks": true,
     "skipLibCheck": true,
     "newLine": "lf"
   }
