--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@mermaid-js/mermaid-cli": "11.4.0",
+    "mermaid": "11.5.0",
     "@actions/core": "1.11.1",
     "yaml": "2.6.1"
   },
