--- a/package.json
+++ b/package.json
@@ -56,17 +56,13 @@
     "test:unit": "jest --config jest.unit.config.js"
   },
   "license": "Apache-2.0",
-  "dependencies": {
-    "@mermaid-js/mermaid-cli": "11.4.0",
-    "mermaid": "11.5.0",
-    "@actions/core": "1.11.1",
-    "yaml": "2.6.1"
-  },
   "devDependencies": {
+    "@actions/core": "1.11.1",
     "@eslint/js": "9.13.0",
     "@eslint/json": "0.6.0",
     "@eslint/markdown": "6.2.1",
     "@github/local-action": "2.2.0",
+    "@tid-xcut/markdown-confluence-sync": "1.1.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.9.0",
     "@typescript-eslint/eslint-plugin": "8.14.0",
@@ -88,10 +84,8 @@
     "lint-staged": "15.2.10",
     "replace-in-file": "8.2.0",
     "ts-jest": "29.2.5",
-    "typescript": "5.6.3"
-  },
-  "optionalDependencies": {
-    "@tid-xcut/markdown-confluence-sync": "1.1.0"
+    "typescript": "5.6.3",
+    "yaml": "2.6.1"
   },
   "files": [
     "dist",
