chore: Remove url

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ ACTIONS_STEP_DEBUG=true
 
 # E2E tests
 
-CONFLUENCE_URL=https://confluence.tid.es
+CONFLUENCE_URL=foo-confluence.atlassian.net
 CONFLUENCE_PAT=foo-access-token
 CONFLUENCE_README_PAGE_ID=foo-readme-page-id
 CONFLUENCE_CHANGELOG_PAGE_ID=foo-changelog-page-id
