fix(CRC-184): Mermaid diagrams (#29)

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,13 @@
 # may be useful to set it to `true`.
 ACTIONS_STEP_DEBUG=true
 
+# E2E tests
+
+CONFLUENCE_URL=foo-confluence.atlassian.net
+CONFLUENCE_PAT=foo-access-token
+CONFLUENCE_README_PAGE_ID=foo-readme-page-id
+CONFLUENCE_CHANGELOG_PAGE_ID=foo-changelog-page-id
+
 # GitHub Actions inputs should follow `INPUT_<name>` format (case-sensitive).
 # Hyphens should not be converted to underscores!
 INPUT_DOCS-DIR="./docs"
