--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,32 +28,25 @@ jobs:
         with:
           npm-token: ${{ secrets.NPM_TOKEN_XCUT }}
 
+      - name: Build
+        id: build
+        run: pnpm build
+
       - name: Lint
         id: npm-lint
-        run: npm run lint
+        run: pnpm lint
 
       - name: Check spelling
         id: npm-check-spelling
-        run: npm run cspell
+        run: pnpm cspell
 
       - name: Check TypeScript types
         id: npm-check-types
-        run: npm run check:types
+        run: pnpm check:types
       
       - name: Test unit
         id: npm-test
-        run: npm run test:unit
-
-      - name: Upload coverage
-        id: upload-coverage
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage
-          path: coverage/
-
-      - name: Build dist/ Directory
-        id: build
-        run: npm run package
+        run: pnpm test:unit
 
       # This will fail the workflow if the `dist/` directory is different than
       # expected.
@@ -80,3 +73,10 @@ jobs:
         with:
           name: dist
           path: dist/
+
+      - name: Upload coverage
+        id: upload-coverage
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage
+          path: coverage/
