--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           mode: id
           docs-dir: '.'
+          confluence-notice-message: 'This page is automatically generated from content in the <a href="https://github.com/Telefonica/markdown-confluence-sync-action" target="_blank">markdown-confluence-sync-action repository</a> Changes made manually will be lost, you should edit this page in Github instead.'
           files-pattern: '*.md'
           files-metadata: |
             [
@@ -45,6 +46,7 @@ jobs:
           confluence-url: ${{ vars.CONFLUENCE_URL }}
           confluence-space-key: ${{ vars.CONFLUENCE_SPACE_KEY }}
           confluence-personal-access-token: ${{ secrets.CONFLUENCE_PAT }}
+          log-level: debug
 
   test-e2e:
     environment: production
