--- a/action.yml
+++ b/action.yml
@@ -65,7 +65,6 @@ inputs:
   cwd:
     description: 'Current working directory. Path from where the library resolve docsDir, filesPattern, and searches for configuration files'
     type: string
-
 runs:
-  using: node20
-  main: dist/index.js
+  using: docker
+  image: Dockerfile
