chore: Ignore @tid-xcut private packages from check

--- a/.github/check-license-compliance.config.yml
+++ b/.github/check-license-compliance.config.yml
@@ -40,6 +40,6 @@ licenses:
     - AGPL-3.0
 npm:
   excludeModules:
-    # The following packages are references to local packages
+    # The following packages are in a private repository
     - nameMatch: "@tid-xcut\/.*"
       ignore: true
